--- a/thuis project timer/css/style.css
+++ b/thuis project timer/css/style.css
@@ -1,7 +1,7 @@
    body {
             margin: 0;
             overflow: hidden;
-            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
+            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #ff0000 100%);
             font-family: 'Poppins', sans-serif;
         }
         
@@ -14,7 +14,7 @@
     z-index: -1;
 }
 
-/* Container */
+
 .container {
     width: 100%;
     min-height: 100vh;
